--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopping-place",
   "version": "0.1.0",
-  "homepage": "https://BigCelz.github.io/kaida-fashion-store",
+  "homepage": "https://BigCelz.github.io/fashion-store",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "preDeploy": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
